--- a/config/database.yml
+++ b/config/database.yml
@@ -18,7 +18,7 @@ development:
   encoding: unicode
   database: diplo_development
   pool:     5
-  username: diplo
+  username: windock
   password:
   template: template0
 
@@ -46,7 +46,7 @@ test:
   encoding: unicode
   database: diplo_test
   pool:     5
-  username: diplo
+  username: windock
   password:
   template: template0
 
@@ -56,6 +56,6 @@ production:
   encoding: unicode
   database: diplo_production
   pool:     5
-  username: diplo
+  username: windock
   password:
   template: template0
